--- a/client/templates/applications/layout.html
+++ b/client/templates/applications/layout.html
@@ -1,13 +1,18 @@
 <template name="layout">
     <body>
         <div class="container">
-                <div>
+                
+                {{>header}}
+
+                <!--<div>
                     <header>
                        <a href="{{pathFor 'postsList'}}"> <img src="images/logo.png" alt="logo" class="head_logo">
                        </a>
-                        <button type="button" class="loginbtn">Log in</button>
+                        <div class='loginbtn'>
+                            {{> loginButtons align="right"}}
+                        </div>
                     </header>
-                </div>
+                </div>-->
             
             <div id="main">
                 {{> yield}}
