--- a/styles/style.css
+++ b/styles/style.css
@@ -38,10 +38,10 @@ color: #FFFFFF;
 
 .loginbtn {
 position: absolute;
-left: 620px;
+left: 600px;
 top: 15px;
-width: 60px;
-height: 20px;
+width: auto;
+height: auto;
 font-family: 'HelveticaNeue', 'Helvetica Neue';
 font-weight: 400;
 font-style: normal;
@@ -80,6 +80,10 @@ li {
 font-family: 'Titillium Web', sans-serif;
 font-weight: 400;
 color: #FFFFFF;
+}
+
+.navbar  {
+	background-color: transparent;
 }
 
 
