--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -11,6 +11,7 @@
         <a href="{{pathFor 'postsList'}}"> <img src="images/logo.png" alt="logo" class="head_logo"></a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
+        <a class="sub-btn" href="{{pathFor 'postSubmit'}}">Submit Product</a>
         <ul class="nav navbar-nav navbar-right">
           {{> loginButtons}}
         </ul>
