--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,6 @@ background-size: auto;
 background-repeat: repeat;
 }
 
-.container {
-width: 690px;
-margin-left: auto;
-margin-right: auto;
-}
-
 header {
 position: relative;
 margin-left: auto;
@@ -21,6 +15,12 @@ height: 50px;
 border-bottom: solid;
 border-width: thin;
 border-color: #FFFFFF;
+}
+
+.container {
+width: 690px;
+margin-left: auto;
+margin-right: auto;
 }
 
 .head_logo{
@@ -84,6 +84,16 @@ color: #FFFFFF;
 
 .navbar  {
 	background-color: transparent;
+
+}
+
+.sub-btn{
+	position: absolute;
+	left: 250px;
+	top: 15px;
+	font-family: 'Titillium Web', sans-serif;
+	font-weight: 400;
+	color: #FFFFFF;
 }
 
 
