--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -9,6 +9,7 @@
           <span class="icon-bar"></span>
         </button>
         <a href="{{pathFor 'postsList'}}"> <img src="images/logo.png" alt="logo" class="head_logo"></a>
+        <a class="sub-btn" href="{{pathFor 'postSubmit'}}">Submit Product</a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav navbar-right">
