--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,43 @@ color: #FFFFFF;
 	background-color: transparent;
 }
 
+.sub-btn{
+	position: absolute;
+	left:250px;
+	top:15px;
+	font-family: 'Titillium Web', sans-serif;
+	font-weight: 300;
+	color: #FFFFFF;
+
+}
+
+.submit-btn{
+	margin-top: 10px;
+	background-color: #FFFFFF;
+	color: black;
+}
+
+.form-input{
+	position: relative;
+}
+.label{
+	position: relative;
+	font-family: 'Titillium Web', sans-serif;
+	font-weight: 400 ;
+	font-size: 16px;
+	font-style: italic;
+	
+}
+
+.form{
+	position: relative;
+	display: block;
+	width: 690px;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
 
 
 
