able to edit posts

--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -2,19 +2,19 @@
 	<form class="container">	
 		<div class="">
 
-			<div>
+			<!--<div>
 				<label class="label">Kind</label>
 			</div>
 			<div>	
 				<input name="kind" id="kind" type="text" value="" placeholder="kind of product" class="form-input"/>
-			</div>
+			</div>-->
 			
 			<div>
 				<div>
 					<label class="label">Amount</label>
 				</div>
 				<div>	
-					<input name="amount" id="amount" type="text" value="" placeholder="amount of product" class="form-input">
+					<input name="amount" id="amount" type="number" value="" placeholder="amount of product" class="form-input">
 				</div>
 				
 
