--- a/client/templates/posts/posts_item.html
+++ b/client/templates/posts/posts_item.html
@@ -1,10 +1,22 @@
 <template name="postItem">
+	
+		<!--<p>
+        	submitted by {{author}}
+        	{{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
+      	</p>
+	</div>-->
 	<div class = "posts">
-		<h4>{{kind}}</h4>
-            <div>
-            	 <ul>
-					<li> <span> {{amount}} </span> {{product}} </li>
-				</ul>
-            </div>
+		<!--<h4>{{kind}}</h4>-->
+		<div>
+			<p>
+        		submitted by {{author}}
+        		{{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
+      		</p>
+		</div>
+            
+        <ul>
+			<li> <span> {{amount}} </span> {{product}} </li>
+		</ul>
+           
      </div>
 </template>
