--- a/client/templates/posts/posts_item.html
+++ b/client/templates/posts/posts_item.html
@@ -9,9 +9,9 @@
 		<!--<h4>{{kind}}</h4>-->
 		<div>
 			<p>
-        		submitted by {{author}}
-        		{{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
+        		<!--{{#if ownPost}}--> <a href="{{pathFor 'postEdit'}}">Edit</a><!-- {{/if}}-->
       		</p>
+      		
 		</div>
             
         <ul>
