--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -28,7 +28,7 @@
 				
 			</div>
 			<div>
-				<input type="submit" value="Submit" class="submit-btn"/>
+				<input type="submit" value="Submit" class="btn submit-btn"/>
 			</div>
 		</div>
 	</form>
