--- a/client/templates/posts/posts_item.html
+++ b/client/templates/posts/posts_item.html
@@ -7,16 +7,24 @@
 	</div>-->
 	<div class = "posts">
 		<!--<h4>{{kind}}</h4>-->
-		<div>
-			<p>
-        		<!--{{#if ownPost}}--> <a href="{{pathFor 'postEdit'}}">Edit</a><!-- {{/if}}-->
-      		</p>
-      		
-		</div>
-            
-        <ul>
-			<li> <span> {{amount}} </span> {{product}} </li>
-		</ul>
+		 <ul>
+			<li> 
+				<div class="row">
+					<div class="col-xs-4">
+						<span>{{amount}}</span> {{product}} 
+					</div>
+					<div class="col-xs-4">
+						<input class="btn changeAmount" type="button" value="+">
+						<input class="btn changeAmount" type="button" value="-">
+					</div>
+					<div class="col-xs-4">
+						<p>
+		        		<!--{{#if ownPost}}--> <a href="{{pathFor 'postEdit'}}">Edit</a><!-- {{/if}}-->
+		      			</p>
+					</div>	
+	      		</div>
+	      	</li>
+      	</ul>
            
      </div>
 </template>
