--- a/styles/style.css
+++ b/styles/style.css
@@ -101,6 +101,7 @@ color: #FFFFFF;
 	margin-top: 10px;
 	background-color: #FFFFFF;
 	color: black;
+	font-family: 'Titillium Web', sans-serif;
 }
 
 .form-input{
@@ -122,6 +123,13 @@ color: #FFFFFF;
 	margin-left: auto;
 	margin-right: auto;
 
+}
+
+a {
+	color: #a28754;
+}
+a:hover{
+	color: #a28754;
 }
 
 
