--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -17,7 +17,7 @@
 				<input type="submit" value="Submit" class="btn submit-btn"/>
 			</div>
 			<div>
-				<input type="submit" value="Delete Product" class="btn submit-btn"/>
+				<input type="submit" value="Delete Product" class="btn submit-btn delete"/>
 			</div>
 		</div>
 	</form>
