--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -1,6 +1,7 @@
 <template name="postSubmit">
+	<h2>add Item to {{name}}</h2>
 	<form class="container">	
-		<div class="">
+		<div>
 
 			<!--<div>
 				<label class="label">Kind</label>
