--- a/client/templates/posts/posts_item.html
+++ b/client/templates/posts/posts_item.html
@@ -19,7 +19,7 @@
 					</div>
 					<div class="col-xs-4">
 						<p>
-		        		<!--{{#if ownPost}}--> <a href="{{pathFor 'postEdit'}}">Edit</a><!-- {{/if}}-->
+		        		<a href="{{pathFor 'postEdit'}}">Edit</a>
 		      			</p>
 					</div>	
 	      		</div>
