Installed new date picker
revisions additions made to post_submit.html & post_submit.js

versions changed

--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -8,6 +8,12 @@
 			<div>	
 				<input name="kind" id="kind" type="text" value="" placeholder="kind of product" class="form-input"/>
 			</div>-->
+
+	    <div class="input-group datetimepicker">
+    	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+    	<input class="set-due-date form-control" type="text"/>
+  		</div>
+			
 			
 			<div>
 				<div>
