Display Date & Time
revisions & additions to files

--- a/client/templates/posts/posts_item.html
+++ b/client/templates/posts/posts_item.html
@@ -11,7 +11,7 @@
 			<li> 
 				<div class="row">
 					<div class="col-xs-4">
-						<span>{{amount}}</span> {{product}} 
+						<span>{{amount}}</span> {{product}} <span>{{date}}</span>
 					</div>
 					<div class="col-xs-4">
 						<input class="btn changeAmount" type="button" value="+">
