--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -11,7 +11,7 @@
 
 	    <div class="input-group datetimepicker">
     	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-    	<input class="set-due-date form-control" type="text"/>
+    	<input class="set-due-date form-control" name="date" type="text"/>
   		</div>
 			
 			
