added edit page and can delete, edit not yet tho

--- a/client/templates/category/category_item.html
+++ b/client/templates/category/category_item.html
@@ -1,11 +1,11 @@
 <template name='categoryItem'>
-	<div class='category'>
+	<div class='category well'>
 		<h2>{{name}}</h2>
 		{{#linkTo route='postSubmit'}}
 			Add Item
 		{{/linkTo}}
 		<div class='pull-right'>
-			{{#linkTo route='categorySubmit'}}
+			{{#linkTo route='categoryEdit'}}
 				Edit category
 			{{/linkTo}}	
 		</div>
