--- a/client/templates/posts/posts_item.html
+++ b/client/templates/posts/posts_item.html
@@ -10,14 +10,14 @@
 		 <ul>
 			<li> 
 				<div class="row">
-					<div class="col-xs-4">
+					<div class="col-xs-12">
 						<span>{{amount}}</span> {{product}} 
 					</div>
 					<div class="col-xs-4">
 						<input class="btn changeAmount" type="button" value="+">
 						<input class="btn changeAmount" type="button" value="-">
 					</div>
-					<div class="col-xs-4">
+					<div class="">
 						<p>
 		        		<a href="{{pathFor 'postEdit'}}">Edit</a>
 		      			</p>
