--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,14 +1,14 @@
 <template name="header">
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
-      <div class="navbar-header">
+      <div class="navbar-header col-xs-12">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
           <span class="sr-only">Toggle navigation</span>
           <!--<span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>-->
         </button>
-        <a href="{{pathFor 'postsList'}}"> <img src="images/logo.png" alt="logo" class="head_logo"></a>
+        <a href="{{pathFor 'categoryList'}}"> <img src="images/logo.png" alt="logo" class="head_logo"></a>
         {{#if currentUser}}<a class="sub-btn" href="{{pathFor 'categorySubmit'}}">Create Category</a>{{/if}}
       </div>
       <div class="collapse navbar-collapse" id="navigation">
