--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -1,6 +1,12 @@
 <template name="postEdit">
 	<form>
 		<div>
+			
+			<div class="input-group datetimepicker">
+    	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+    	<input class="set-due-date form-control" name="date" type="text"/>
+  		</div>
+
 			<div>
 				<label class="label">Amount</label>
 			</div>
