able to edit category name

--- a/client/templates/category/category_edit.html
+++ b/client/templates/category/category_edit.html
@@ -1,7 +1,7 @@
 <template name="categoryEdit">
  	<form>
 	 	<div>
-	 		<input name="category" id="category" type="text" value="" placeholder="name" class="form-input">
+	 		<input name="category" id="category" type="text" value="{{name}}" placeholder="name" class="form-input">
 	 	</div>
 	 	<div>
 	 		<input type="submit" value="Submit" class="btn submit-btn">
