not important, just updating

--- a/client/templates/category/category_item.html
+++ b/client/templates/category/category_item.html
@@ -1,5 +1,5 @@
 <template name='categoryItem'>
-	<div class='category well'>
+	<div class='well'>
 		<h2>{{name}}</h2>
 		{{#linkTo route='postSubmit'}}
 			Add Item
