--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,8 @@ font-family: 'Titillium Web', sans-serif;
 }
 
 .container {
-width: 690px;
+width: 100%;
+max-width: 690px;
 margin-left: auto;
 margin-right: auto;
 }
