--- a/client/templates/category/category_submit.html
+++ b/client/templates/category/category_submit.html
@@ -1,5 +1,5 @@
 <template name="categorySubmit">
- 	<form>
+ 	<form class='container'>
 	 	<div>
 	 		<input name="category" id="category" type="text" value="" placeholder="name" class="form-input">
 	 	</div>
