--- a/client/templates/applications/layout.html
+++ b/client/templates/applications/layout.html
@@ -1,13 +1,10 @@
 <template name="layout">
     <body>
-        <div class="container">
-                
-                {{> header}}
-            
+        <div>      
+     	   {{> header}}
             <div id="main">
                 {{> yield}}
             </div>
-        
         </div>
      </body>
 </template>
