--- a/client/templates/category/category_item.html
+++ b/client/templates/category/category_item.html
@@ -1,16 +1,24 @@
 <template name='categoryItem'>
 	<div class='well'>
-		<h2>{{name}}</h2>
-		{{#linkTo route='postSubmit'}}
-			Add Item
-		{{/linkTo}}
-		<div class='pull-right'>
-			{{#linkTo route='categoryEdit'}}
-				Edit category
-			{{/linkTo}}	
+		<div class='row'>
+			<div class='col-xs-8'>
+				<h3>{{name}}</h3>
+			</div>
+			<div class='col-xs-4 pull-right'>
+				{{#linkTo route='categoryEdit'}}
+					Edit Category
+				{{/linkTo}}	
+			</div>
+			<div class='soft-break col-xs-12'></div>
 		</div>
-		{{#each postsInCategory}}
-			{{> postItem}}
-		{{/each}}
+		<div>
+			<a class="btn submit-btn" type='button' href="{{pathFor 'postSubmit'}}">Add Product</a>
+
+		</div>
+		<div class='margin-top-10'>
+			{{#each postsInCategory}}
+				{{> postItem}}
+			{{/each}}
+		</div>
 	</div>
 </template>
