--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -1,30 +1,37 @@
 <template name="postEdit">
-	<form>
-		<div>
-			
-			<div class="input-group datetimepicker">
-    	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-    	<input class="set-due-date form-control" name="date" type="text"/>
-  		</div>
-
+	<form class='container'>
+				<div>
 			<div>
-				<label class="label">Amount</label>
-			</div>
-			<div>	
-				<input name="amount" id="amount" type="number" value="" placeholder="amount of product" class="form-input">
-			</div>			
-			<div>	
-				<label class="label">Product</label>
-			</div>	
-			<div>	
-				<input name="product" id="product" type="text" value="" placeholder="product" class="form-input">
-			</div>
-			<div>
-				<input type="submit" value="Submit" class="btn submit-btn"/>
-			</div>
-			<div>
-				<input type="submit" value="Delete Product" class="btn submit-btn delete"/>
+				<div>
+					<label class="label">Amount</label>
+				</div>
+				<div>	
+					<input name="amount" id="amount" type="number" value="" placeholder="amount of product" class="form-input">
+				</div>
+				<div class='margin-top-10'>
+					<div>	
+						<label class="label">Product</label>
+					</div>
+					
+				<div>	
+					<input name="product" id="product" type="text" value="" placeholder="product" class="form-input">
+				</div>
+				</div>
+				</div>
+				<div class='row margin-top-10'>
+					<div class='col-xs-12 col-sm-4 col-md-4 col-lg-4'>
+						<label class='label'>Expire date</label>
+					    <div class="input-group datetimepicker">
+				    		<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+				    		<input class="set-due-date form-control" name="date" type="text"/>
+				  		</div>
+		  			</div>
+	  			</div>
+			<div class='margin-top-10'>
+				<input type="submit" value="Submit" class="btn submit-btn"/><span> <input type="submit" value="Delete Product" class="btn submit-btn delete"/></span>
 			</div>
 		</div>
 	</form>
 </template>
+
+				
