--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -1,21 +1,7 @@
 <template name="postSubmit">
-	<h2>add Item to {{name}}</h2>
-	<form class="container">	
+	<form class="container">
+		<h2>add Item to {{name}}</h2>	
 		<div>
-
-			<!--<div>
-				<label class="label">Kind</label>
-			</div>
-			<div>	
-				<input name="kind" id="kind" type="text" value="" placeholder="kind of product" class="form-input"/>
-			</div>-->
-
-	    <div class="input-group datetimepicker">
-    	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-    	<input class="set-due-date form-control" name="date" type="text"/>
-  		</div>
-			
-			
 			<div>
 				<div>
 					<label class="label">Amount</label>
@@ -23,17 +9,25 @@
 				<div>	
 					<input name="amount" id="amount" type="number" value="" placeholder="amount of product" class="form-input">
 				</div>
-				
-
-				
-				<div>	
-					<label class="label">Product</label>
-				</div>	
+				<div class='margin-top-10'>
+					<div>	
+						<label class="label">Product</label>
+					</div>
+					
 				<div>	
 					<input name="product" id="product" type="text" value="" placeholder="product" class="form-input">
 				</div>
-				
-			</div>
+				</div>
+				</div>
+				<div class='row margin-top-10'>
+					<div class='col-xs-12 col-sm-4 col-md-4 col-lg-4'>
+						<label class='label'>Expire date</label>
+					    <div class="input-group datetimepicker">
+				    		<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+				    		<input class="set-due-date form-control" name="date" type="text"/>
+				  		</div>
+		  			</div>
+	  			</div>
 			<div>
 				<input type="submit" value="Submit" class="btn submit-btn"/>
 			</div>
