--- a/client/templates/category/category_submit.html
+++ b/client/templates/category/category_submit.html
@@ -1,9 +1,10 @@
 <template name="categorySubmit">
  	<form class='container'>
 	 	<div>
-	 		<input name="category" id="category" type="text" value="" placeholder="name" class="form-input">
+			<div> <label class='label'>Category Name</label></div>
+	 		<div> <input name="category" id="category" type="text" value="" placeholder="name" class="form-input"></div>
 	 	</div>
-	 	<div>
+	 	<div class='margin-top-10'>
 	 		<input type="submit" value="Submit" class="btn submit-btn">
 	 	</div>
  	</form>
