--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -1,26 +1,27 @@
 <template name="postSubmit">
-	<form class="container">
-		<h2>add Item to {{name}}</h2>	
-		<div>
-			<div>
-				<div>
-					<label class="label">Amount</label>
-				</div>
-				<div>	
-					<input name="amount" id="amount" type="number" value="" placeholder="amount of product" class="form-input">
-				</div>
-				<div class='margin-top-10'>
-					<div>	
-						<label class="label">Product</label>
+	<form>	
+		<div class='container'>
+			<h3>add Item to {{name}}</h3>
+			<div class='row'>
+				<div class='col-xs-4'>
+					<div>
+						<label class="label">Amount</label>
 					</div>
-					
-				<div>	
-					<input name="product" id="product" type="text" value="" placeholder="product" class="form-input">
+					<div>	
+						<input name="amount" id="amount" type="number" value="" placeholder="amount of product" class="form-input">
+					</div>
 				</div>
+				<div class='col-xs-4'>
+						<div>	
+							<label class="label">Product</label>
+						</div>
+						<div>	
+							<input name="product" id="product" type="text" value="" placeholder="product" class="form-input">
+						</div>
 				</div>
-				</div>
+			</div>
 				<div class='row margin-top-10'>
-					<div class='col-xs-12 col-sm-4 col-md-4 col-lg-4'>
+					<div class='col-xs-8'>
 						<label class='label'>Expire date</label>
 					    <div class="input-group datetimepicker">
 				    		<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
@@ -28,7 +29,7 @@
 				  		</div>
 		  			</div>
 	  			</div>
-			<div>
+			<div class='margin-top-10'>
 				<input type="submit" value="Submit" class="btn submit-btn"/>
 			</div>
 		</div>
