--- a/client/templates/category/category_item.html
+++ b/client/templates/category/category_item.html
@@ -1,24 +1,25 @@
 <template name='categoryItem'>
-	<div class='well'>
+	<div class="panel-group well" id="accordion">
 		<div class='row'>
 			<div class='col-xs-8'>
-				<h3>{{name}}</h3>
+				<h3><a data-toggle="collapse" data-parent="#accordion" href="#{{_id}}">{{name}}</a></h3>
 			</div>
 			<div class='col-xs-4 pull-right'>
 				{{#linkTo route='categoryEdit'}}
 					Edit Category
 				{{/linkTo}}	
 			</div>
-			<div class='soft-break col-xs-12'></div>
 		</div>
-		<div>
-			<a class="btn submit-btn" type='button' href="{{pathFor 'postSubmit'}}">Add Product</a>
+		<div id="{{_id}}" class="panel-collapse collapse in">
+			<div>
+				<a class="btn submit-btn" type='button' href="{{pathFor 'postSubmit'}}">Add Product</a>
 
-		</div>
-		<div class='margin-top-10'>
-			{{#each postsInCategory}}
-				{{> postItem}}
-			{{/each}}
+			</div>
+			<div class='margin-top-10'>
+				{{#each postsInCategory}}
+					{{> postItem}}
+				{{/each}}
+			</div>
 		</div>
 	</div>
 </template>
